SF Primes/src/objects/Forms_OwnerFieldSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Assigned_Forms_Builder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assigned Forms Builder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_to_LAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner to LAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_to_LFD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner to LFD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_to_LIS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owner to LIS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_FCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected FCC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_LAS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected LAS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejected_LFD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rejected LFD</label>
        <type>Checkbox</type>
    </fields>
    <label>Forms_OwnerFieldSetting</label>
</CustomObject>